# Laba1

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/src/Creator/: main.cpp
apps/src/Main/: main.cpp
apps/src/Reporter/: main.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/General/: Employee.h  File.h  Process.h
libs/core/src/General/: Employee.cpp  File.cpp  Process.cpp
tests/General/: File_tests.cpp  Process_tests.cpp
