CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(Laba1 VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)


MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

ENABLE_TESTING()

ADD_SUBDIRECTORY(libs/core)
ADD_SUBDIRECTORY(libs/googletest)
ADD_SUBDIRECTORY(apps)
ADD_SUBDIRECTORY(tests)